fixed cluster companies view

--- a/app/components/common/welcome/welcome.profile.html
+++ b/app/components/common/welcome/welcome.profile.html
@@ -24,8 +24,9 @@
                 your email address is <a style="color:#4ea5e0;" editable-email="welcome.user.profile.email">{{welcome.user.profile.email}}</a><br/>
                 and your headline is <a style="color:#4ea5e0;" editable-text="welcome.user.profile.headline">{{welcome.user.profile.headline || 'empty'}}</a>.
                 <br/><br/>
-                Click below to edit your summary:
-                <small>Note: Sum yourself up in the first sentence. It will be used on your profile.</small>
+                Click below to edit your summary.
+                <br>
+                <span style="font-size: 13px;">Focus on the first sentence. It will be used on your profile page.</span>
             </h4>
         </div>
         <div class="summary_form">
