--- a/app/components/companies/company.list.html
+++ b/app/components/companies/company.list.html
@@ -19,25 +19,25 @@
                         <li>
                             <hr style="margin: 10px 0 10px 0;">
                         </li>
-                        <li ng-class="{'active':companies.selectedStage.indexOf('bootstrap') >= 0}" ng-click="companies.filterStage('bootstrap')">
+                        <li ng-class="{'active':companies.selectedStage.indexOf('0 - 500k') >= 0}" ng-click="companies.filterStage('0 - 500k')">
                             <a>
                                 Bootstrap
                                 <span class="pull-right">0 - 500k</span>
                             </a>
                         </li>
-                        <li ng-class="{'active':companies.selectedStage.indexOf('validation') >= 0}" ng-click="companies.filterStage('validation')">
+                        <li ng-class="{'active':companies.selectedStage.indexOf('500k - 1M') >= 0}" ng-click="companies.filterStage('500k - 1M')">
                             <a>
                                 Validation
                                 <span class="pull-right">500k - 1M</span>
                             </a>
                         </li>
-                        <li ng-class="{'active':companies.selectedStage.indexOf('growth') >= 0}" ng-click="companies.filterStage('growth')">
+                        <li ng-class="{'active':companies.selectedStage.indexOf('1M - 5M') >= 0}" ng-click="companies.filterStage('1M - 5M')">
                             <a>
                                 Growth
                                 <span class="pull-right">1M - 5M</span>
                             </a>
                         </li>
-                        <li ng-class="{'active':companies.selectedStage.indexOf('scale') >= 0}" ng-click="companies.filterStage('scale')">
+                        <li ng-class="{'active':companies.selectedStage.indexOf('5M+') >= 0}" ng-click="companies.filterStage('5M+')">
                             <a>
                                 Scale
                                 <span class="pull-right">5M+</span>
