--- a/app/components/common/nav/nav.add_network.html
+++ b/app/components/common/nav/nav.add_network.html
@@ -2,7 +2,7 @@
     <div class="color-line"></div>
     <div class="modal-header">
         <h4 class="modal-title">Add a Network in {{add.location.profile.name}}</h4>
-        <p class="font-bold">A network is a private group of companies and people who are connected by virtue of being in the network. Examples of networks include startup accelerators, coworking spaces, mentorship groups, and investment funds.</p>
+        <p class="font-bold">Networks are groups of companies and people who are connected through a private, invitation-only community. Examples of networks include startup accelerators, coworking spaces, mentorship groups, and investment funds.</p>
     </div>
     <div class="modal-body">
         <form name="add.form">
