--- a/app/less/style.less
+++ b/app/less/style.less
@@ -37,6 +37,7 @@
 @import "social_board.less";
 @import "tabs.less";
 @import "forum.less";
+@import "tour.less";
 @import "base.less";
 @import "various.less";
 
