--- a/app/components/common/dashboard/dashboard.html
+++ b/app/components/common/dashboard/dashboard.html
@@ -107,7 +107,7 @@
         </div>
         <div class="row">
             <div class="col-xs-12 col-sm-6">
-                <div class="hpanel forum-box">
+                <div class="hpanel forum-box" style="overflow: hidden;">
 
                     <div class="panel-heading" style="border-bottom: 2px solid #34495E;">
                         <h3>Top Industries</h3>
@@ -129,7 +129,7 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6">
-                <div class="hpanel forum-box">
+                <div class="hpanel forum-box" style="overflow: hidden;">
 
                     <div class="panel-heading" style="border-bottom: 2px solid #3498db">
                         <h3>Top Skills</h3>
