fixed logout issue

--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -21,6 +21,8 @@
                 </div>
             </div>
 
+            <a id="tourstart" style="display: none;" ng-click="tour.restart(true)"></a>
+
             <div ng-if="!nav.embedded" class="navbar-right">
                 <ul class="nav navbar-nav no-borders">
                     <li ng-if="!nav.user" class="dropdown">
