--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -43,7 +43,7 @@
                         </a>
                     </li>
                     <li ng-if="nav.user" class="dropdown">
-                        <a tooltip-placement="left" tooltip="Logout" ui-sref="logout" style="padding-right: 30px;">
+                        <a tooltip-placement="left" tooltip="Logout" href="/logout" style="padding-right: 30px;">
                             <i class="pe-7s-upload pe-rotate-90"></i>
                         </a>
                     </li>
