changed glow color

--- a/app/less/various.less
+++ b/app/less/various.less
@@ -22,8 +22,8 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 .glowing-border {
   outline: none;
-  border-color: #3c763d;
-  box-shadow: 0 0 10px #3c763d;
+  border-color: #91c461;
+  box-shadow: 0 0 10px #91c461;
   border-radius: 7px;
 }
 
