added parent search to clusters

--- a/app/components/common/dashboard/dashboard.html
+++ b/app/components/common/dashboard/dashboard.html
@@ -18,7 +18,7 @@
                             </li>
                         </ol>
                     </div>
-                    <small>{{ nav.community.profile.description }}</small>
+                    <small>{{ nav.community.profile.headline || nav.community.profile.description }}</small>
                 </div>
             </div>
         </div>
