--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -38,7 +38,7 @@
                         </a>
                     </li>
                     <li class="dropdown">
-                        <a>
+                        <a ui-sref="feedback" tooltip-placement="left" tooltip="Feedback">
                             <i class="pe-7s-help1"></i>
                         </a>
                     </li>
